todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      volumes:
        - name: shared-file
          persistentVolumeClaim:
            claimName: file-claim

      containers:
        - name: todoapp
          image: ipersids/todoapp:ex2.2
          volumeMounts:
            - name: shared-file
              mountPath: /usr/src/app/files
          ports:
            - name: http
              containerPort: 3000
