todo_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-svc
spec:
  type: NodePort
  selector:
    app: todoapp # app as declared in the deployment
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 4556
      targetPort: http
